fix overflow begin of README.md

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
+    height: 100%;
+    overflow: hidden;
     background: lightgrey;
 }
 
